[gd_scene load_steps=3 format=3 uid="uid://ggcw3vbcpmvm"]

[ext_resource type="Script" uid="uid://bt7c7c173p7g" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="FontFile" uid="uid://d3qwewppi3wrn" path="res://assets/fonts/Tiny5-Regular.ttf" id="2_5ysmq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="P1Label" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 94.0
offset_bottom = 37.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 24
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 24
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreP1" type="Label" parent="."]
offset_top = 37.0
offset_right = 40.0
offset_bottom = 73.0
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreP2" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 37.0
offset_bottom = 73.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 10.0
offset_right = 44.5
offset_bottom = 58.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 42
text = "Pong"

[node name="ColorRect" type="ColorRect" parent="Message"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 42
text = "Play"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
